typescript/checker/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName36.ts.stderr
error: 'implements', 'interface', 'let', 'package', 'private', 'protected',  'public', 'static', or 'yield' cannot be used as an identifier in strict mode
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName36.ts:3:6
  |
3 |     [public ]: string;
  |      ^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            32,
        ),
        hi: BytePos(
            38,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName36.ts:3:6
  |
3 |     [public ]: string;
  |      ^^^^^^

error: TS1166 {
    span: Span {
        lo: BytePos(
            31,
        ),
        hi: BytePos(
            49,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName36.ts:3:5
  |
3 |     [public ]: string;
  |     ^^^^^^^^^^^^^^^^^^

